--- a/sample05_imput.html
+++ b/sample05_imput.html
@@ -11,9 +11,9 @@
         <input id="gender_male" type="radio" name="gender" value="male" />
         <label for="ger">
         <input id="gender_female" type="radio" name="gender" value="female" />
-        <label for=>
+        <label for=><
         <input type="submit" value="Submit"/>
         </dl>
     </form>
 </body>
-</html>
+</htmld
